<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="14dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_header_size" />


    <Button
        android:id="@+id/search_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        style="@style/MainButtons"
        app:icon="@drawable/vector"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="65dp" />


    <Button
        android:id="@+id/media_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/main_margin_top"
        android:text="@string/songs"
        style="@style/MainButtons"
        app:icon="@drawable/media"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/settings_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/main_margin_top"
        android:text="@string/settings"
        style="@style/MainButtons"
        app:icon="@drawable/settings"
        app:iconPadding="10.66sp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="505dp" />


</LinearLayout>



