<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            style="@style/SettingsStrelka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxWidth="16dp"
            android:src="@drawable/strelka" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:letterSpacing="0"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/settings_header"
            android:textSize="@dimen/text_header_size" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="@dimen/settings_padding_horizontal">

        <TextView
            style="@style/SettingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0.48"
            android:scaleX="0.8"
            android:scaleY="1"
            app:thumbTint="@color/switch_thumbTint"
            app:trackTint="@color/switch_trackTint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:paddingHorizontal="@dimen/settings_padding_horizontal">

        <TextView
            style="@style/SettingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/share" />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:maxWidth="16dp"
            android:src="@drawable/sharing" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:paddingHorizontal="@dimen/settings_padding_horizontal">

        <TextView
            style="@style/SettingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/support" />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:maxWidth="20dp"
            android:src="@drawable/group" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:paddingHorizontal="@dimen/settings_padding_horizontal">

        <TextView
            style="@style/SettingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/agreement" />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:maxWidth="8dp"
            android:src="@drawable/galka" />
    </RelativeLayout>


</LinearLayout>